--- a/WebDev/FrontEnd/crescendo-demo/src/styles/variables.scss
+++ b/WebDev/FrontEnd/crescendo-demo/src/styles/variables.scss
@@ -1,8 +1,10 @@
 
 $white: #ffffff;
-$light-gray: #eaecee;
+$light-gray: #ebebeb;
 $med-gray: #cccccc;
 $dark-gray: #707070;
+
+$red: #d81e05;
 
 $light-blue: #1a9cf7;
 $med-blue: #1450d2;
