--- a/WebDev/FrontEnd/crescendo-demo/src/styles/styles.scss
+++ b/WebDev/FrontEnd/crescendo-demo/src/styles/styles.scss
@@ -14,6 +14,7 @@ html{
         border-bottom: 14px solid $dark-blue;
         @media screen and (max-width:767px){
             background-color: $light-gray !important;
+            border-bottom: none;
         }
     }
 }
